# -cmake_project_template

./: README.md  main.cpp
Sandbox/: CMakeLists.txt
TemplateProject/include/: PrecompiledHeaders.h
TemplateProject/include/TemplateProject/: Core.h
TemplateProject/src/TemplateProject/: Core.cpp
